# template_fun

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh  googletest.cmake
include/tfun/: concat.h  filter.h  fold.h  list.h  map.h  quicksort.h  show.h  tfun.h
test/: CMakeLists.txt  concat.cc  filter.cc  fold.cc  map.cc  quicksort.cc  show.cc  tfun.cc
